--- a/qcodesplusplus/plotting/offline/design.ui
+++ b/qcodesplusplus/plotting/offline/design.ui
@@ -151,7 +151,7 @@
          </sizepolicy>
         </property>
         <property name="title">
-         <string>Settings for Selected File</string>
+         <string>Settings Selected File</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_4">
          <item row="0" column="0">
