--- a/qcodesplusplus/plotting/offline/design.ui
+++ b/qcodesplusplus/plotting/offline/design.ui
@@ -997,13 +997,14 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionOpen_File_2"/>
+    <addaction name="action_open_file"/>
     <addaction name="action_open_files_from_folder"/>
     <addaction name="separator"/>
     <addaction name="action_link_to_folder"/>
     <addaction name="action_unlink_folder"/>
     <addaction name="separator"/>
     <addaction name="actionSave_plot_s_as"/>
+    <addaction name="action_copy_plot_as_image"/>
    </widget>
    <widget class="QMenu" name="menuBatch_Actions">
     <property name="title">
@@ -1135,17 +1136,17 @@
   </action>
   <action name="action_current_file">
    <property name="text">
-    <string>Current File...</string>
+    <string>Current File</string>
    </property>
   </action>
   <action name="action_all_files">
    <property name="text">
-    <string>All Files...</string>
+    <string>All Files</string>
    </property>
   </action>
   <action name="action_filters">
    <property name="text">
-    <string>Filters...</string>
+    <string>Filters</string>
    </property>
   </action>
   <action name="action_merge_raw">
@@ -1170,7 +1171,7 @@
   </action>
   <action name="action_open_files_from_folder">
    <property name="text">
-    <string>Open Folder</string>
+    <string>Open Folder (Ctrl+Shift+O)</string>
    </property>
   </action>
   <action name="action_save_files_as_PNG">
@@ -1205,12 +1206,12 @@
   </action>
   <action name="action_checked_files">
    <property name="text">
-    <string>Checked Files...</string>
+    <string>Checked Files</string>
    </property>
   </action>
   <action name="action_link_to_folder">
    <property name="text">
-    <string>Link Folder</string>
+    <string>Link Folder (Ctrl+L)</string>
    </property>
   </action>
   <action name="action_unlink_folder">
@@ -1225,27 +1226,32 @@
   </action>
   <action name="action_combine_files">
    <property name="text">
-    <string>Combine Checked Files...</string>
+    <string>Combine Checked Files</string>
    </property>
   </action>
   <action name="action_duplicate_file">
    <property name="text">
-    <string>Duplicate Selected File...</string>
+    <string>Duplicate Selected File (Ctrl+D)</string>
    </property>
   </action>
   <action name="action_save_data_selected_file">
    <property name="text">
-    <string>Save Data Selected File...</string>
+    <string>Save Data Selected File</string>
    </property>
   </action>
-  <action name="actionOpen_File_2">
+  <action name="action_open_file">
    <property name="text">
-    <string>Open File</string>
+    <string>Open File (Ctrl+O)</string>
    </property>
   </action>
   <action name="actionSave_plot_s_as">
    <property name="text">
-    <string>Save plot as image</string>
+    <string>Save plot as pdf or png (Ctrl+S)</string>
+   </property>
+  </action>
+  <action name="action_copy_plot_as_image">
+   <property name="text">
+    <string>Copy plot as image (Ctrl+C)</string>
    </property>
   </action>
  </widget>
