--- a/qcodesplusplus/plotting/offline/design.ui
+++ b/qcodesplusplus/plotting/offline/design.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1400</width>
-    <height>880</height>
+    <width>1700</width>
+    <height>563</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -38,7 +38,7 @@
             <widget class="QPushButton" name="down_file_button">
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -67,7 +67,7 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -80,7 +80,7 @@
             <widget class="QPushButton" name="up_file_button">
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -99,7 +99,7 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -112,7 +112,7 @@
             <widget class="QPushButton" name="refresh_file_button">
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -131,7 +131,7 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -142,6 +142,12 @@
            </item>
            <item row="0" column="1">
             <widget class="QPushButton" name="open_folder_button">
+             <property name="minimumSize">
+              <size>
+               <width>130</width>
+               <height>0</height>
+              </size>
+             </property>
              <property name="text">
               <string>Open Folder</string>
              </property>
@@ -149,6 +155,12 @@
            </item>
            <item row="0" column="2">
             <widget class="QPushButton" name="link_folder_button">
+             <property name="minimumSize">
+              <size>
+               <width>130</width>
+               <height>0</height>
+              </size>
+             </property>
              <property name="text">
               <string>Link Folder</string>
              </property>
@@ -156,6 +168,12 @@
            </item>
            <item row="5" column="2">
             <widget class="QPushButton" name="unlink_folder_button">
+             <property name="minimumSize">
+              <size>
+               <width>130</width>
+               <height>0</height>
+              </size>
+             </property>
              <property name="text">
               <string>Unlink Folder</string>
              </property>
@@ -190,7 +208,7 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -209,7 +227,7 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -228,7 +246,7 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -323,7 +341,7 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -342,7 +360,7 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -398,7 +416,7 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -417,7 +435,7 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -436,7 +454,7 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -449,7 +467,7 @@
             <widget class="QPushButton" name="load_filters_button">
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
@@ -971,7 +989,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1400</width>
+     <width>1700</width>
      <height>18</height>
     </rect>
    </property>
