IG: select axes from plot settings instead of right click

--- a/qcodesplusplus/plotting/offline/design.ui
+++ b/qcodesplusplus/plotting/offline/design.ui
@@ -1306,6 +1306,11 @@
     <string>Start/stop tracking (Ctrl+T)</string>
    </property>
   </action>
+  <action name="action_save_session">
+   <property name="text">
+    <string>Save session (Ctrl+Shift+S)</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
