--- a/qcodesplusplus/plotting/offline/design.ui
+++ b/qcodesplusplus/plotting/offline/design.ui
@@ -297,7 +297,7 @@
          </sizepolicy>
         </property>
         <property name="title">
-         <string>Filters Applied to Selected File</string>
+         <string>Filters Applied to Selected File/Trace</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_6">
          <item row="0" column="0">
@@ -481,6 +481,13 @@
         </layout>
        </widget>
       </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QVBoxLayout" name="oneD_layout">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetDefaultConstraint</enum>
+      </property>
      </layout>
     </item>
     <item>
