IG: start on diagonal linecuts

--- a/qcodesplusplus/plotting/offline/design.ui
+++ b/qcodesplusplus/plotting/offline/design.ui
@@ -484,7 +484,7 @@
      </layout>
     </item>
     <item>
-     <layout class="QVBoxLayout" name="oneD_layout">
+     <layout class="QVBoxLayout" name="oneD_layout" stretch="">
       <property name="sizeConstraint">
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
