--- a/qcodesplusplus/plotting/offline/design.ui
+++ b/qcodesplusplus/plotting/offline/design.ui
@@ -304,10 +304,10 @@
          <string>Filters Applied to Selected File/Trace</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_6">
-         <item row="0" column="0">
+         <item row="1" column="0">
           <layout class="QGridLayout" name="filters_layout">
-           <item row="0" column="2">
-            <widget class="QPushButton" name="delete_filters_button">
+           <item row="5" column="0">
+            <widget class="QPushButton" name="up_filters_button">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
                <horstretch>0</horstretch>
@@ -316,22 +316,12 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>110</width>
+               <width>130</width>
                <height>0</height>
               </size>
              </property>
              <property name="text">
-              <string>Remove</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0" colspan="2">
-            <widget class="QComboBox" name="filters_combobox">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
+              <string>Move Up</string>
              </property>
             </widget>
            </item>
@@ -351,25 +341,6 @@
              </property>
              <property name="text">
               <string>Clear Filters</string>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="0">
-            <widget class="QPushButton" name="up_filters_button">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="minimumSize">
-              <size>
-               <width>130</width>
-               <height>0</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>Move Up</string>
              </property>
             </widget>
            </item>
@@ -442,22 +413,24 @@
              </property>
             </widget>
            </item>
-           <item row="5" column="1">
-            <widget class="QPushButton" name="down_filters_button">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="minimumSize">
-              <size>
-               <width>130</width>
-               <height>0</height>
-              </size>
-             </property>
+           <item row="7" column="0">
+            <widget class="QPushButton" name="filtXtocol_button">
              <property name="text">
-              <string>Move Down</string>
+              <string>Send X to data</string>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="1">
+            <widget class="QPushButton" name="filtYtocol_button">
+             <property name="text">
+              <string>Send Y to data</string>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="2">
+            <widget class="QPushButton" name="filtZtocol_button">
+             <property name="text">
+              <string>Send Z to data</string>
              </property>
             </widget>
            </item>
@@ -480,28 +453,58 @@
              </property>
             </widget>
            </item>
-           <item row="7" column="0">
-            <widget class="QPushButton" name="filtXtocol_button">
+           <item row="5" column="1">
+            <widget class="QPushButton" name="down_filters_button">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>130</width>
+               <height>0</height>
+              </size>
+             </property>
              <property name="text">
-              <string>Send X to data</string>
+              <string>Move Down</string>
              </property>
             </widget>
            </item>
-           <item row="7" column="1">
-            <widget class="QPushButton" name="filtYtocol_button">
+           <item row="0" column="2">
+            <widget class="QPushButton" name="delete_filters_button">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>110</width>
+               <height>0</height>
+              </size>
+             </property>
              <property name="text">
-              <string>Send Y to data</string>
+              <string>Remove</string>
              </property>
             </widget>
            </item>
-           <item row="7" column="2">
-            <widget class="QPushButton" name="filtZtocol_button">
-             <property name="text">
-              <string>Send Z to data</string>
+           <item row="0" column="0" colspan="2">
+            <widget class="QComboBox" name="filters_combobox">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
              </property>
             </widget>
            </item>
           </layout>
+         </item>
+         <item row="0" column="0">
+          <widget class="QComboBox" name="mixeddata_filter_box"/>
          </item>
         </layout>
        </widget>
