--- a/qcodesplusplus/plotting/offline/design.ui
+++ b/qcodesplusplus/plotting/offline/design.ui
@@ -306,26 +306,7 @@
         <layout class="QGridLayout" name="gridLayout_6">
          <item row="1" column="0">
           <layout class="QGridLayout" name="filters_layout">
-           <item row="5" column="0">
-            <widget class="QPushButton" name="up_filters_button">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="minimumSize">
-              <size>
-               <width>130</width>
-               <height>0</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>Move Up</string>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="2">
+           <item row="7" column="2">
             <widget class="QPushButton" name="clear_filters_button">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -344,7 +325,26 @@
              </property>
             </widget>
            </item>
-           <item row="3" column="0" colspan="3">
+           <item row="6" column="0">
+            <widget class="QPushButton" name="up_filters_button">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>130</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>Move Up</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="0" colspan="3">
             <widget class="QTableWidget" name="filters_table">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -381,7 +381,7 @@
              </attribute>
             </widget>
            </item>
-           <item row="5" column="2">
+           <item row="6" column="2">
             <widget class="QPushButton" name="load_filters_button">
              <property name="minimumSize">
               <size>
@@ -394,7 +394,14 @@
              </property>
             </widget>
            </item>
-           <item row="6" column="1">
+           <item row="8" column="1">
+            <widget class="QPushButton" name="filtYtocol_button">
+             <property name="text">
+              <string>Send Y to data</string>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="1">
             <widget class="QPushButton" name="paste_filters_button">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -413,28 +420,14 @@
              </property>
             </widget>
            </item>
-           <item row="7" column="0">
-            <widget class="QPushButton" name="filtXtocol_button">
-             <property name="text">
-              <string>Send X to data</string>
-             </property>
-            </widget>
-           </item>
-           <item row="7" column="1">
-            <widget class="QPushButton" name="filtYtocol_button">
-             <property name="text">
-              <string>Send Y to data</string>
-             </property>
-            </widget>
-           </item>
-           <item row="7" column="2">
+           <item row="8" column="2">
             <widget class="QPushButton" name="filtZtocol_button">
              <property name="text">
               <string>Send Z to data</string>
              </property>
             </widget>
            </item>
-           <item row="6" column="0">
+           <item row="7" column="0">
             <widget class="QPushButton" name="copy_filters_button">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -453,7 +446,24 @@
              </property>
             </widget>
            </item>
-           <item row="5" column="1">
+           <item row="8" column="0">
+            <widget class="QPushButton" name="filtXtocol_button">
+             <property name="text">
+              <string>Send X to data</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0" colspan="2">
+            <widget class="QComboBox" name="filters_combobox">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="1">
             <widget class="QPushButton" name="down_filters_button">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -491,8 +501,8 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="0" colspan="2">
-            <widget class="QComboBox" name="filters_combobox">
+           <item row="1" column="0" colspan="3">
+            <widget class="QComboBox" name="mixeddata_filter_box">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
                <horstretch>0</horstretch>
@@ -502,9 +512,6 @@
             </widget>
            </item>
           </layout>
-         </item>
-         <item row="0" column="0">
-          <widget class="QComboBox" name="mixeddata_filter_box"/>
          </item>
         </layout>
        </widget>
